@@ -99,7 +99,7 @@ public class RegionLookupIntegrationTests extends IntegrationTestsSupport {
 			assertThat(appDataRegion.getAttributes().getMulticastEnabled()).isFalse();
 			assertThat(appDataRegion.getAttributes().getScope()).isEqualTo(Scope.DISTRIBUTED_ACK);
 			assertThat(appDataRegion.getAttributes().getInitialCapacity()).isEqualTo(101);
-			assertThat(new Float(appDataRegion.getAttributes().getLoadFactor())).isEqualTo(new Float(0.85f));
+			assertThat(Float.valueOf(appDataRegion.getAttributes().getLoadFactor())).isEqualTo(Float.valueOf(0.85f));
 			assertThat(appDataRegion.getAttributes().getCloningEnabled()).isTrue();
 			assertThat(appDataRegion.getAttributes().getConcurrencyChecksEnabled()).isTrue();
 			assertThat(appDataRegion.getAttributes().getKeyConstraint()).isEqualTo(Integer.class);
@@ -214,7 +214,7 @@ public class RegionLookupIntegrationTests extends IntegrationTestsSupport {
 			assertThat(nativeLocalRegion.getAttributes().getConcurrencyLevel()).isEqualTo(80);
 			assertThat(nativeLocalRegion.getAttributes().getInitialCapacity()).isEqualTo(101);
 			assertThat(nativeLocalRegion.getAttributes().getKeyConstraint()).isEqualTo(Integer.class);
-			assertThat(new Float(nativeLocalRegion.getAttributes().getLoadFactor())).isEqualTo(new Float(0.95f));
+			assertThat(Float.valueOf(nativeLocalRegion.getAttributes().getLoadFactor())).isEqualTo(Float.valueOf(0.95f));
 			assertThat(nativeLocalRegion.getAttributes().getValueConstraint()).isEqualTo(String.class);
 
 			Region<?, ?> nativePartitionRegion = applicationContext.getBean("NativePartitionRegion", Region.class);
@@ -230,7 +230,7 @@ public class RegionLookupIntegrationTests extends IntegrationTestsSupport {
 			assertThat(nativePartitionRegion.getAttributes().getConcurrencyLevel()).isEqualTo(40);
 			assertThat(nativePartitionRegion.getAttributes().getInitialCapacity()).isEqualTo(51);
 			assertThat(nativePartitionRegion.getAttributes().getKeyConstraint()).isEqualTo(Integer.class);
-			assertThat(new Float(nativePartitionRegion.getAttributes().getLoadFactor())).isEqualTo(new Float(0.85f));
+			assertThat(Float.valueOf(nativePartitionRegion.getAttributes().getLoadFactor())).isEqualTo(Float.valueOf(0.85f));
 			assertThat(nativePartitionRegion.getAttributes().getMulticastEnabled()).isFalse();
 			assertThat(nativePartitionRegion.getAttributes().getValueConstraint()).isEqualTo(String.class);
 
@@ -245,7 +245,7 @@ public class RegionLookupIntegrationTests extends IntegrationTestsSupport {
 			assertThat(nativeReplicateRegion.getAttributes().getCloningEnabled()).isFalse();
 			assertThat(nativeReplicateRegion.getAttributes().getConcurrencyChecksEnabled()).isTrue();
 			assertThat(nativeReplicateRegion.getAttributes().getInitialCapacity()).isEqualTo(23);
-			assertThat(new Float(nativeReplicateRegion.getAttributes().getLoadFactor())).isEqualTo(new Float(0.75f));
+			assertThat(Float.valueOf(nativeReplicateRegion.getAttributes().getLoadFactor())).isEqualTo(Float.valueOf(0.75f));
 			assertThat(nativeReplicateRegion.getAttributes().getKeyConstraint()).isEqualTo(Integer.class);
 			assertThat(nativeReplicateRegion.getAttributes().getMulticastEnabled()).isFalse();
 			assertThat(nativeReplicateRegion.getAttributes().getScope()).isEqualTo(Scope.DISTRIBUTED_NO_ACK);
